# jbioapi

./: .classpath  .project  AUTHORS  Makefile.am  Makefile.in  ProjectHome.md  README  configure.ac  jbioapi-test.sh  jbioapi.jaas.config
bioapi_jbioapi_win32_dll/bioapi_src/: 11_Install.htm  12_Use.htm  20_Todo.htm  31_Contributors.htm
bioapi_jbioapi_win32_dll/bioapi_src/addins/bioapi_dummy_addin/: bioapi_dummy_addin.def  bioapi_dummy_addin.dsp  bioapi_dummy_addin.dsw  mod_manage.c
bioapi_jbioapi_win32_dll/bioapi_src/addins/maf/: maf_dllmain.c  maf_include.h  maf_util.h  sample_maf_config.h
bioapi_jbioapi_win32_dll/bioapi_src/addins/pwbsp/: PwDlg.rc  pwbsp.plg
bioapi_jbioapi_win32_dll/bioapi_src/apps/Cmds/: CMDS.dsp  CMDSUtil.cpp  CMDSUtil.h  CdsaRec.cpp  CdsaRec.h  CdsaRecType.h  RecType.h
bioapi_jbioapi_win32_dll/bioapi_src/apps/MdsEdit/: FindDlg.h  MainFrm.cpp  MainFrm.h  MdsEdit.cpp  MdsEdit.h  MdsEdit.rc  MdsEditDoc.cpp  MdsEditDoc.h  MdsEditView.cpp  ModifyMultiUint32Dlg.cpp  ModifyMultiUint32Dlg.h  ModifyStringDlg.cpp  ModifyUint32Dlg.cpp  ModifyUint32Dlg.h  OptionsDlg.h  StdAfx.cpp  extractMdsAttr.pl  mdsEditUtil.h  resource.h
bioapi_jbioapi_win32_dll/bioapi_src/apps/mod_install/: cmdline.c  cmdline.h  mod_install.dsp
bioapi_jbioapi_win32_dll/bioapi_src/framework/bioapi_util/: convert.c  memfuncs.c
bioapi_jbioapi_win32_dll/bioapi_src/framework/h_layer/: bioapi_api.c  h_layer.dsp  manage_interface.c
bioapi_jbioapi_win32_dll/bioapi_src/framework/jbioapi/: bioapi100.lib  h_layer.def  h_layer.dep  h_layer.mak  internal.h  jbioapi.dsp  jbioapi.ncb  jbioapi.opt  jbioapi.plg  jbioapi_wrap.c  manage_interface.c  mds_util.lib  mds_util_api.lib  precomp.h  spi_callbacks.c
bioapi_jbioapi_win32_dll/bioapi_src/framework/mds_util/: internal.h  mds_util.c  mds_util.dsw  mds_util.h
bioapi_jbioapi_win32_dll/bioapi_src/framework/mds_util_api/: mds_app_util.c  mds_util_api.dsp  mds_util_api.plg  mds_util_query.c
bioapi_jbioapi_win32_dll/bioapi_src/include/: bioapi_util.h  biospi.h  installdefs.h
bioapi_jbioapi_win32_dll/bioapi_src/include/src/: bioapi_spi.htp  bioapi_typecast.htp  bioapicoref.h  bioapif.h  hproc.pl
doc/: allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  overview-frame.html  overview-summary.html  overview-tree.html  package-frame.html  package-list  package-use.html  serialized-form.html
doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-2.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
doc/net/qrivy/bioapi/: BioAPI.html  BioAPIConstants.html  BioAPI_BIR.html  BioAPI_BIR_BIOMETRIC_DATA_FORMAT.html  BioAPI_BIR_HEADER.html  BioAPI_CANDIDATE_BIR.html  (+22 more)
m4/: ac_jni_include_dirs.m4
src/: Test.java  bioapi_uuid.h
trunk/: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  configure
trunk/bioapi_jbioapi_win32_dll/bioapi_src/: 00_License.htm  01_Readme.htm  09_Manifest.htm  10_Build.htm  30_History.htm  32_Contacts.htm
trunk/doc/: Test.html  allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-summary.html  package-summary.html  package-tree.html  packages.html
trunk/doc/class-use/: Test.html
trunk/doc/index-files/: index-1.html  index-10.html  index-12.html  index-13.html  index-14.html  index-16.html  index-17.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
trunk/src/: Makefile.am  Makefile.in  Test.java  bioapi_util.h  extra.c  jbioapi.i  jbioapi_wrap.c
trunk/src/es/uvigo/tsc/gts/biowebauth/lib/jbioapi/utils/: BioAPI_BIR_HEADER_Customize.java  ConversionUtils.java  IOUtil.java
trunk/src/net/qrivy/bioapi/: BioAPI.java  BioAPIConstants.java  BioAPIJNI.java  BioAPI_BIR.java  BioAPI_BIR_BIOMETRIC_DATA_FORMAT.java  BioAPI_BIR_HEADER.java  BioAPI_CANDIDATE_BIR.java  BioAPI_GUI_BITMAP.java  BioAPI_IDENTIFY_POPULATION.java  BioAPI_INPUT_BIR.java  BioAPI_INPUT_BIR_InputBIR.java  BioAPI_MEMORY_FUNCS.java  SWIGTYPE_p_f___void.java  SWIGTYPE_p_f_unsigned_int_p_void__p_void.java  SWIGTYPE_p_p_p_bioapi_candidate.java  SWIGTYPE_p_unsigned_char.java  SWIGTYPE_p_void.java  SchemaArray.java
trunk/src/net/qrivy/jbioapi/: BiometricServiceProvider.java  BiometricsFramework.java
(+309 files in other folders)
